Fix subnav z-index

--- a/web/components/Header.module.css
+++ b/web/components/Header.module.css
@@ -174,6 +174,7 @@
     border: solid 2px var(--color-accent);
     color: var(--color-accent);
     display: none;
+    z-index: 1;
   }
 
   @nest & > li {
